增加了删除功能 | Add delete feature for store command